--- a/codes/day-1/web-first-app/app.css
+++ b/codes/day-1/web-first-app/app.css
@@ -11,15 +11,15 @@
 /* table > tbody > tr:hover {
   font-size: larger;
 } */
-table > tbody > tr:hover {
+table > tbody > tr > td:hover {
   font-size: larger;
 }
-table > tbody > tr:nth-child(1) {
+/* table > tbody > tr:nth-child(1) {
   font-size: small;
 }
 table > tbody > tr:last-child {
   font-weight: bolder;
-}
+} */
 #test::first-line {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: blue;
